; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx231xx/extr_cx231xx-417.c_mpeg_poll.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx231xx/extr_cx231xx-417.c_mpeg_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.cx231xx_fh* }
%struct.cx231xx_fh = type { i32 }
%struct.poll_table_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, %struct.poll_table_struct*)* @mpeg_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpeg_poll(%struct.file* %0, %struct.poll_table_struct* %1) #0 {
  %3 = alloca %struct.file*, align 8
  %4 = alloca %struct.poll_table_struct*, align 8
  %5 = alloca %struct.cx231xx_fh*, align 8
  store %struct.file* %0, %struct.file** %3, align 8
  store %struct.poll_table_struct* %1, %struct.poll_table_struct** %4, align 8
  %6 = load %struct.file*, %struct.file** %3, align 8
  %7 = getelementptr inbounds %struct.file, %struct.file* %6, i32 0, i32 0
  %8 = load %struct.cx231xx_fh*, %struct.cx231xx_fh** %7, align 8
  store %struct.cx231xx_fh* %8, %struct.cx231xx_fh** %5, align 8
  %9 = load %struct.file*, %struct.file** %3, align 8
  %10 = load %struct.cx231xx_fh*, %struct.cx231xx_fh** %5, align 8
  %11 = getelementptr inbounds %struct.cx231xx_fh, %struct.cx231xx_fh* %10, i32 0, i32 0
  %12 = load %struct.poll_table_struct*, %struct.poll_table_struct** %4, align 8
  %13 = call i32 @videobuf_poll_stream(%struct.file* %9, i32* %11, %struct.poll_table_struct* %12)
  ret i32 %13
}

declare dso_local i32 @videobuf_poll_stream(%struct.file*, i32*, %struct.poll_table_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
